--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="U Mobile Tech - CCTV & Mobile Solutions">
     <meta property="og:description" content="Your one-stop shop for CCTV installations and mobile repairs in Sri Lanka.">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1200&auto=format&fit=crop">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta property="og:type" content="website">
 
@@ -22,7 +22,7 @@
         "@type": "Organization",
         "name": "U Mobile Tech",
         "url": "https://yourwebsite.com",
-        "logo": "https://via.placeholder.com/300",
+        "logo": "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=300&auto=format&fit=crop",
         "contactPoint": {
             "@type": "ContactPoint",
             "telephone": "+94-76-392-9910",
@@ -216,7 +216,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, rgba(159, 51, 255, 0.8), rgba(0, 0, 0, 0.7)), url('https://via.placeholder.com/1200x800') center/cover no-repeat;
+            background: linear-gradient(135deg, rgba(159, 51, 255, 0.8), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1200&auto=format&fit=crop') center/cover no-repeat;
             color: var(--white);
             padding: 150px 5%;
             text-align: center;
@@ -1041,17 +1041,17 @@
     </div>
 
     <script>
-        // Sample product data
+        // Updated product data with real images
         const products = [
-            { id: 1, name: "HD CCTV Camera", price: 14999, image: "https://via.placeholder.com/300", description: "High-definition security camera with night vision", originalPrice: 16999, discount: "12%" },
-            { id: 2, name: "Wireless CCTV System", price: 39999, image: "https://via.placeholder.com/300", description: "Complete wireless security system with 4 cameras", originalPrice: 44999, discount: "11%" },
-            { id: 3, name: "iPhone Screen Replacement", price: 7999, image: "https://via.placeholder.com/300", description: "Original quality screen replacement for iPhone models", originalPrice: 8999, discount: "11%" },
-            { id: 4, name: "Samsung Battery", price: 2999, image: "https://via.placeholder.com/300", description: "High-capacity replacement battery for Samsung phones", originalPrice: 3499, discount: "14%" },
-            { id: 5, name: "CCTV DVR", price: 19999, image: "https://via.placeholder.com/300", description: "Digital video recorder for CCTV systems", originalPrice: 22999, discount: "13%" },
-            { id: 6, name: "Outdoor IP Camera", price: 24999, image: "https://via.placeholder.com/300", description: "Weatherproof IP camera with remote access", originalPrice: 27999, discount: "11%" },
-            { id: 7, name: "Phone Charger Cable", price: 1499, image: "https://via.placeholder.com/300", description: "Durable USB-C charging cable", originalPrice: 1799, discount: "17%" },
-            { id: 8, name: "Smart Doorbell Camera", price: 17999, image: "https://via.placeholder.com/300", description: "Wi-Fi enabled doorbell with video recording", originalPrice: 19999, discount: "10%" },
-            { id: 9, name: "Motorola Moto E22s Battery - NH50", price: 2750, image: "https://via.placeholder.com/300", description: "Li-ion battery for Motorola Moto E22s", originalPrice: 4500, discount: "39%" }
+            { id: 1, name: "HD CCTV Camera", price: 14999, image: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=300&auto=format&fit=crop", description: "High-definition security camera with night vision", originalPrice: 16999, discount: "12%" },
+            { id: 2, name: "Wireless CCTV System", price: 39999, image: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=300&auto=format&fit=crop", description: "Complete wireless security system with 4 cameras", originalPrice: 44999, discount: "11%" },
+            { id: 3, name: "iPhone Screen Replacement", price: 7999, image: "https://images.unsplash.com/photo-1607936854279-355d64b9c140?q=80&w=300&auto=format&fit=crop", description: "Original quality screen replacement for iPhone models", originalPrice: 8999, discount: "11%" },
+            { id: 4, name: "Samsung Battery", price: 2999, image: "https://images.unsplash.com/photo-1608231387042-66d1773070a5?q=80&w=300&auto=format&fit=crop", description: "High-capacity replacement battery for Samsung phones", originalPrice: 3499, discount: "14%" },
+            { id: 5, name: "CCTV DVR", price: 19999, image: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=300&auto=format&fit=crop", description: "Digital video recorder for CCTV systems", originalPrice: 22999, discount: "13%" },
+            { id: 6, name: "Outdoor IP Camera", price: 24999, image: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=300&auto=format&fit=crop", description: "Weatherproof IP camera with remote access", originalPrice: 27999, discount: "11%" },
+            { id: 7, name: "Phone Charger Cable", price: 1499, image: "https://images.unsplash.com/photo-1608231387042-66d1773070a5?q=80&w=300&auto=format&fit=crop", description: "Durable USB-C charging cable", originalPrice: 1799, discount: "17%" },
+            { id: 8, name: "Smart Doorbell Camera", price: 17999, image: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=300&auto=format&fit=crop", description: "Wi-Fi enabled doorbell with video recording", originalPrice: 19999, discount: "10%" },
+            { id: 9, name: "Motorola Moto E22s Battery - NH50", price: 2750, image: "https://images.unsplash.com/photo-1608231387042-66d1773070a5?q=80&w=300&auto=format&fit=crop", description: "Li-ion battery for Motorola Moto E22s", originalPrice: 4500, discount: "39%" }
         ];
 
         let cartCount = parseInt(localStorage.getItem('cartCount')) || 0;
